--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,21 @@
 	    <artifactId>phantomjsdriver</artifactId>
 	    <version>1.4.4</version>
 	</dependency>
-		
+	
+	<!-- https://mvnrepository.com/artifact/net.sourceforge.htmlunit/htmlunit -->
+	<dependency>
+	    <groupId>net.sourceforge.htmlunit</groupId>
+	    <artifactId>htmlunit</artifactId>
+	    <version>2.36.0</version>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+	<dependency>
+	    <groupId>org.jsoup</groupId>
+	    <artifactId>jsoup</artifactId>
+	    <version>1.12.1</version>
+	</dependency>
+				
 		
     <dependency>
       <groupId>junit</groupId>
