--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,29 @@
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
-	<dependency>
+	<!-- <dependency>
 	    <groupId>org.jsoup</groupId>
 	    <artifactId>jsoup</artifactId>
-	    <version>1.12.1</version>
+	    <version>1.13.1</version>
+	</dependency> -->
+	
+	<!-- webmagic -->
+	<dependency>
+	    <groupId>us.codecraft</groupId>
+	    <artifactId>webmagic-core</artifactId>
+	    <version>0.7.3</version>
 	</dependency>
-				
+	<dependency>
+	    <groupId>us.codecraft</groupId>
+	    <artifactId>webmagic-extension</artifactId>
+	    <version>0.7.3</version>
+	    <!-- <exclusions>
+	        <exclusion>
+	            <groupId>org.slf4j</groupId>
+	            <artifactId>slf4j-log4j12</artifactId>
+	        </exclusion>
+	    </exclusions> -->
+	</dependency>			
 		
     <dependency>
       <groupId>junit</groupId>
